--- a/src/App.css
+++ b/src/App.css
@@ -92,9 +92,9 @@ button, .login-btn {
   box-shadow: 5px 8px #f7c5a8;
 }
 
-.home-ant-container:hover {
+/* .home-ant-container:hover {
   box-shadow: 0 0 11px rgba(33,33,33,.2); 
-}
+} */
 
 .home-syn-container {
   background-color: white;
@@ -124,9 +124,9 @@ button, .login-btn {
   margin: 6px;
 }
 
-.user-scores:hover {
+/* .user-scores:hover {
   box-shadow: 0 0 11px rgba(33,33,33,.2); 
-}
+} */
 
 .syn-play-button {
   font-size: 200px;
@@ -373,6 +373,7 @@ button, .login-btn {
 
 .nav-li {
   float: right;
+  cursor: pointer;
 }
 
 .nav-link {
@@ -384,9 +385,19 @@ button, .login-btn {
   text-shadow: 2px 2px #ffeadb;
 }
 
+.nav-link:link {
+  color: black;
+}
 .nav-link:visited {
   color: black;
 }
+
+.nav-link:hover {
+  text-shadow: 2px 2px black;
+  color: #ffeadb;
+}
+
+
 
 /* ------ Leaderboard ------ */
 
